--- a/Code/05_Twitter_Application.ipynb
+++ b/Code/05_Twitter_Application.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle\n",
+    "from textblob import TextBlob\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score, cross_val_predict\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
@@ -22,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Twitter Data Now"
+    "## Twitter Data"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +271,7 @@
        "[5 rows x 1707 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +353,7 @@
        "(1655, 1707)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,19 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "twitter_preds = twitter.dropna(subset = ['text']).copy()\n",
     "twitter_preds['prediction'] = cvec_preds\n",
     "twitter_preds = twitter_preds[['text','prediction']]\n",
-    "twitter_preds['prediction'] = twitter_preds['prediction'].map({0:'False', 1:'True'})"
+    "twitter_preds['prediction'] = twitter_preds['prediction'].map({0:'Not Reliable', 1:'Reliable'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -416,78 +417,87 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Imagine being on a cruise ship that’s in the m...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Not Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Este sitio web permite rastrear la propagación...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-le tengo más miedo al tiro bajo que al corona...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Not Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>#CORONAVIRUS https://www.theguardian.com/world...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>#coronavirus #quarantined #ChinaCoronaVirus #C...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Not Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Dont worry guys im sure alex jones has a testo...</td>\n",
-       "      <td>False</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>GA Dept Public Health epidemiologist Cherie Dr...</td>\n",
-       "      <td>True</td>\n",
+       "      <th>1655</th>\n",
+       "      <td>Maybe #coronavirus??? disease?</td>\n",
+       "      <td>Not Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Is this how Corona virus started?</td>\n",
-       "      <td>False</td>\n",
+       "      <th>1656</th>\n",
+       "      <td>Cruise Giant Carnival Works to Manage Deepenin...</td>\n",
+       "      <td>Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>http://dlvr.it/RQ0MjR Eunice Yoon@onlyyoontvDi...</td>\n",
-       "      <td>False</td>\n",
+       "      <th>1657</th>\n",
+       "      <td>This corona virus must b like measles where it...</td>\n",
+       "      <td>Not Reliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>$BARC $JPM Emerging-Market Bonds Have Edge Ove...</td>\n",
-       "      <td>False</td>\n",
+       "      <th>1658</th>\n",
+       "      <td>Cruise Giant Carnival Works to Manage Deepenin...</td>\n",
+       "      <td>Reliable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1659</th>\n",
+       "      <td>China's Hubei province reports 132 new coronav...</td>\n",
+       "      <td>Not Reliable</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1655 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                text prediction\n",
-       "0  Imagine being on a cruise ship that’s in the m...      False\n",
-       "1  Este sitio web permite rastrear la propagación...       True\n",
-       "2  -le tengo más miedo al tiro bajo que al corona...      False\n",
-       "3  #CORONAVIRUS https://www.theguardian.com/world...       True\n",
-       "4  #coronavirus #quarantined #ChinaCoronaVirus #C...      False\n",
-       "5  Dont worry guys im sure alex jones has a testo...      False\n",
-       "6  GA Dept Public Health epidemiologist Cherie Dr...       True\n",
-       "7                  Is this how Corona virus started?      False\n",
-       "8  http://dlvr.it/RQ0MjR Eunice Yoon@onlyyoontvDi...      False\n",
-       "9  $BARC $JPM Emerging-Market Bonds Have Edge Ove...      False"
+       "                                                   text    prediction\n",
+       "0     Imagine being on a cruise ship that’s in the m...  Not Reliable\n",
+       "1     Este sitio web permite rastrear la propagación...      Reliable\n",
+       "2     -le tengo más miedo al tiro bajo que al corona...  Not Reliable\n",
+       "3     #CORONAVIRUS https://www.theguardian.com/world...      Reliable\n",
+       "4     #coronavirus #quarantined #ChinaCoronaVirus #C...  Not Reliable\n",
+       "...                                                 ...           ...\n",
+       "1655                     Maybe #coronavirus??? disease?  Not Reliable\n",
+       "1656  Cruise Giant Carnival Works to Manage Deepenin...      Reliable\n",
+       "1657  This corona virus must b like measles where it...  Not Reliable\n",
+       "1658  Cruise Giant Carnival Works to Manage Deepenin...      Reliable\n",
+       "1659  China's Hubei province reports 132 new coronav...  Not Reliable\n",
+       "\n",
+       "[1655 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter_preds.head(10)"
+    "twitter_preds"
    ]
   },
   {
