--- a/Code/04_Modeling.ipynb
+++ b/Code/04_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,11 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score, cross_val_predict\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.linear_model import LogisticRegression \n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB, GaussianNB"
+    "from sklearn.naive_bayes import MultinomialNB, GaussianNB\n",
+    "from sklearn.metrics import precision_score, roc_auc_score, recall_score\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +265,7 @@
        "[5 rows x 1710 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +298,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +369,7 @@
        "       1.        ])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +640,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,16 +657,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7881385296236577\n",
-      "accuracy score - Existing data 0.9556850282485876\n",
-      "accuracy score - New data 0.7791313559322034\n"
+      "0.7852521292810098\n",
+      "accuracy score - Existing data 0.9570853039061131\n",
+      "accuracy score - New data 0.7914915966386554\n"
      ]
     }
    ],
@@ -678,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +727,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,16 +739,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7816070409401227\n",
-      "accuracy score - Existing data 0.9706920903954802\n",
-      "accuracy score - New data 0.7764830508474576\n"
+      "0.7735152591437443\n",
+      "accuracy score - Existing data 0.977228936766509\n",
+      "accuracy score - New data 0.792016806722689\n"
      ]
     }
    ],
@@ -760,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +835,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,16 +847,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7570623037122746\n",
-      "accuracy score - Existing data 0.8538135593220338\n",
-      "accuracy score - New data 0.75\n"
+      "0.7565261369339888\n",
+      "accuracy score - Existing data 0.8481345244351025\n",
+      "accuracy score - New data 0.7778361344537815\n"
      ]
     }
    ],
@@ -866,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,15 +970,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7489406779661016\n",
-      "0.7288135593220338\n"
+      "0.74373795761079\n",
+      "0.7342436974789915\n"
      ]
     }
    ],
@@ -985,13 +989,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_name = '../Assets/gaussian.sav'\n",
     "pickle.dump(gnb_model, open(file_name, 'wb'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gnb_model = pickle.load(open('../Assets/gaussian.sav', 'rb'))\n",
+    "mnb_model = pickle.load(open('../Assets/multi_bayes.sav', 'rb'))\n",
+    "ada_model = pickle.load(open('../Assets/ada_tf.sav', 'rb'))\n",
+    "logreg_model = pickle.load(open('../Assets/logreg.sav', 'rb'))\n",
+    "logreg_model1 = pickle.load(open('../Assets/logreg_tf_ss.sav', 'rb'))\n",
+    "rf_model = pickle.load(open('../Assets/rf_ss.sav', 'rb'))\n",
+    "rf_model1 = pickle.load(open('../Assets/rf_ss_tf.sav', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gaussian Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7276619072705742"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test2, gnb_model.predict_proba(X_test2)[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9020618556701031"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_test2, gnb_model.predict(X_test2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multinomial Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8546808232809664"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test2, mnb_model.predict_proba(X_test2)[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8225806451612904"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_test2, mnb_model.predict(X_test2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8212648646701517"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test1, ada_model.predict_proba(X_test1)[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7731673582295989"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_test1, ada_model.predict(X_test1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest with Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8472895757068175"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, rf_model.predict_proba(X_test)[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8100147275405007"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_test, rf_model.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest with Scaling and TFIDF Vectorization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8390157911088898"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test1, rf_model1.predict_proba(X_test1)[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8177710843373494"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_test1, rf_model1.predict(X_test1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
